# mss-back-gepeto

./: .gitignore  README.md  cdk.json  functions.json  pyproject.toml  requirements.txt
authorizers/firebase_authorizer/: config.py  main.py  unit.py
docs/: config.py
functions/gepeto/: config.py  integration.py  main.py  unit.py
infra/services/: __init__.py  api_gateway.py  aws_lambda.py  layers.py  secrets_manager.py
infra/stacks/: dev_stack.py  lambda_stack.py  prod_stack.py  staging_stack.py
layers/sm_utils/: sm_utils.py
my-deployment-package/distro-1.9.0.dist-info/: RECORD
my-deployment-package/httpx-0.27.2.dist-info/: RECORD
my-deployment-package/openai-1.47.0.dist-info/: RECORD
my-deployment-package/tqdm-4.66.5.dist-info/: RECORD
t2/: manage.py
t2/gepeto/: apps.py  middleware.py  serializers.py  urls.py  views.py
t2/t2/: asgi.py  settings.py  urls.py  wsgi.py
